--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -27,7 +27,7 @@
             title="View Posts">
             <i class="fa fa-file-powerpoint-o mr-2"></i> Posts
           </button>
-          <button class="btn btn-primary" (click)="viewAlbums(user.id)"
+          <button class="btn btn-info" (click)="viewAlbums(user.id)"
             title="View Albums">
             <i class="fa fa-folder-o mr-2"></i>
             Albums
