--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -3,7 +3,7 @@
   <h1>List of Posts</h1>
 
   <!-- Back Button -->
-  <button class="btn btn-primary" (click)="goBack()">
+  <button class="btn btn-secondary" (click)="goBack()">
     <i class="fa fa-arrow-left mr-2"></i>
     Back
   </button>
