--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,4 @@
 .header{
-  cursor: pointer;
   margin: 0px;
   height: 60px;
   background-color: #f8f8f8;
@@ -12,7 +11,12 @@
   z-index: 2;
 
   h3{
+    cursor: pointer;
     font-weight: bold;
     margin-bottom: 0px;
   }
+}
+
+.initial{
+  cursor: initial !important;
 }
