--- a/src/app/components/photo/photo.component.html
+++ b/src/app/components/photo/photo.component.html
@@ -2,6 +2,7 @@
 <div class="title mt-5">
   <h1>List of Photos</h1>
 
+  <!-- Back button -->
   <button class="btn btn-secondary" (click)="goBack()">
     <i class="fa fa-arrow-left mr-2"></i>
     Back
