--- a/src/app/get-album/get-album.component.html
+++ b/src/app/get-album/get-album.component.html
@@ -3,7 +3,10 @@
         <span class="sr-only">Loading...</span>
     </div>
 </div>
-<h3 class="d-flex justify-content-center">Albums</h3>
+<div class="d-flex justify-content-between align-items-center p-4">
+    <h3 class="text-center flex-grow-1">Albums</h3>
+    <button class="back btn btn-outline-secondary" (click)="back()">Back</button>
+</div>
 <table class="table table-striped">
     <thead>
         <tr>
@@ -22,7 +25,7 @@
             </td>
             <td>{{ album.title}}</td> 
             <td>
-                <button class="btn btn-primary" (click)="viewPhotos(album.id)">View Photos</button>
+                <button class="btn btn-outline-secondary" (click)="viewPhotos(album.id)">View Photos</button>
             </td>           
         </tr>
     </tbody>
