--- a/src/app/get-photo/get-photo.component.html
+++ b/src/app/get-photo/get-photo.component.html
@@ -3,7 +3,11 @@
         <span class="sr-only">Loading...</span>
     </div>
 </div>
-<h3 class="d-flex justify-content-center">Photos</h3>
+<div class="d-flex justify-content-between align-items-center p-4">
+    <h3 class="text-center flex-grow-1">Photos</h3>
+    <button class="back btn btn-outline-secondary" (click)="back()">Back</button>
+</div>
+
 <div class="row p-4">
     <div class="col-2 mb-4" *ngFor="let photo of photos">
         <img src="{{photo.url}}" width="100%" />
