--- a/src/app/get-post/get-post.component.html
+++ b/src/app/get-post/get-post.component.html
@@ -1,4 +1,7 @@
-<h3 class="d-flex justify-content-center">Posts</h3>
+<div class="d-flex justify-content-between align-items-center p-4">
+  <h3 class="text-center flex-grow-1">Posts</h3>
+  <button class="back btn btn-outline-secondary" (click)="back()">Back</button>
+</div>
 <div class="post">
   <div *ngIf="isLoading" class="spinner">
       <div class="spinner-border" role="status">
@@ -12,7 +15,7 @@
               <p>{{ post.body }}</p>
               <div class="d-flex justify-content-between align-bottom">
                   <div class="comments">
-                      <button type="button" class="btn btn-outline-primary" (click)="collapse.toggle()"
+                      <button type="button" class="btn btn-outline-secondary" (click)="collapse.toggle()"
                           [attr.aria-expanded]="!post['isCollapse']" aria-controls="collapseExample">
                           Comments
                       </button>
@@ -23,7 +26,7 @@
                       <div class="card-body">
                           <div *ngFor="let comment of comments;">
                               <p *ngIf="comment.postId == post.id">
-                                  {{ comment.body }}
+                                 - {{ comment.body }}
                               </p>
                           </div>
                       </div>
