--- a/src/app/get-post/get-post.component.scss
+++ b/src/app/get-post/get-post.component.scss
@@ -1,7 +1,8 @@
 .post {
     .row {
         .col-md-12 {
-            background-color: rgb(245, 245, 245);
+            //background-color: rgb(245, 245, 245);
+            border:1px solid #c2c2c2;
             border-radius: 5px;
             .title {
                 font-size: 22px;
