--- a/src/app/get-user/get-user.component.html
+++ b/src/app/get-user/get-user.component.html
@@ -23,8 +23,8 @@
             <td>{{ user.email}}</td>
             <td>{{ user.phone}}</td>
             <td>
-                <button class="btn btn-primary" (click)="viewPosts(user.id)">View Posts</button>
-                <button class="btn btn-secondary ml-3" (click)="viewAlbums(user.id)">View Albums</button>
+                <button class="btn btn-outline-secondary" (click)="viewPosts(user.id)">View Posts</button>
+                <button class="btn btn-outline-secondary ml-3" (click)="viewAlbums(user.id)">View Albums</button>
             </td>
         </tr>
     </tbody>
